# shift-assignments

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README-TESTING.md  README.md  SECURITY.md  docker-compose.prod.yaml  docker-compose.yaml  render.yaml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml  deploy-prod.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml  render.yaml  requirements.txt
backend/app/: __init__.py  audit.py  config.py  constants.py  db.py  main.py  storage.py
backend/app/routers/: __init__.py  assignments.py  auth.py  chat.py  employees.py  exchanges.py  forms.py  github.py  google_forms.py  history.py  settings.py  shift_types.py
backend/app/schemas/: __init__.py  auth.py  chat.py  exchange.py  schemas.py  shift_types.py
backend/app/services/: __init__.py  auth_service.py  calendar_gen.py  calendar_service.py  chat_service.py  chat_tools.py  constraint_checker.py  csv_parser.py  email_service.py  exchange_service.py  firebase_service.py  github_service.py  google_credentials.py  scheduler.py  ws_manager.py
backend/app/services/ai_providers/: __init__.py  base.py  factory.py  gemini.py  groq.py  ollama.py  openai.py  openrouter.py  together.py
backend/app/utils/: __init__.py  date_utils.py  name_similarity.py  name_translator.py
backend/scripts/: migrate_to_neon.py
backend/tests/: conftest.py  test_assignments.py  test_auth.py  test_chat.py  test_chat_tools.py  test_constraint_checker.py  test_employees.py  test_exchanges.py  test_fetch_responses.py  test_forms.py  test_history.py  test_name_similarity.py  test_settings.py  test_shift_types.py  test_utils.py
docs/: ARCHITECTURE.md  INSTALLATION.md  TESTING.md
docs/guides/: index.html  setup-guide-beginner.html  setup-guide-technical.html  user-guide.html
frontend/: .dockerignore  .env.example  Dockerfile  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  tailwind.config.ts  trace_output.txt  vercel.json
frontend/app/: globals.css  layout.tsx  (+1 more)
(+68 files in other folders)
