[project]
name = "ect-backend"
version = "1.0.0"
description = "ECT Shift Assignment Platform - FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    # FastAPI & Server
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    # Data processing
    "pandas==2.2.0",
    "numpy==1.26.3",
    # Utilities
    "python-dotenv==1.0.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.1.0",
    "httpx==0.26.0",
    # HTML generation
    "jinja2==3.1.3",
    # Date utilities
    "python-dateutil==2.8.2",
    # Google API
    "google-auth==2.27.0",
    "google-auth-oauthlib==1.2.0",
    "google-api-python-client==2.116.0",
    # Security
    "cryptography~=44.0",
    "slowapi~=0.1.9",
    "PyJWT~=2.10",
    # Firebase Authentication (for phone OTP)
    "firebase-admin>=6.5.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
